Added more markdowns

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -14,10 +14,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00ef9e35",
+   "metadata": {},
+   "source": [
+    "## Objective of the Study\n",
+    "\n",
+    "The primary objective of this project is to develop a machine learning classification model that predicts customer churn for SyriaTel, a telecommunications company.\n",
+    "\n",
+    "Specifically, the project aims to:\n",
+    "- Identify customers who are likely to discontinue their services (churn).\n",
+    "- Understand the key factors that influence customer churn.\n",
+    "- Build and evaluate a Logistic Regression model to classify customers as churners or non-churners.\n",
+    "- Assess model performance using appropriate evaluation metrics such as accuracy, precision, recall, F1-score, and ROC-AUC.\n",
+    "\n",
+    "The insights derived from this model can help SyriaTel make data-driven decisions to improve customer retention strategies and reduce revenue loss.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5b32a935",
    "metadata": {},
    "source": [
-    "Importing the required libraries"
+    "Importing required libraries"
    ]
   },
   {
@@ -282,6 +300,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e9dfd43",
+   "metadata": {},
+   "source": [
+    "Exploratory Data Analysis (EDA)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 82,
    "id": "646d6894",
@@ -397,7 +423,9 @@
    "metadata": {},
    "source": [
     "## Data Understanding\n",
-    "**Summary of the columns:**\n",
+    "\n",
+    "The dataset contains customer information from SyriaTel, including demographic, service usage, and account details.\n",
+    "\n",
     "\n",
     "State : The state the customer lives in\n",
     "\n",
@@ -536,18 +564,6 @@
    ],
    "source": [
     "df.nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "b998145f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create numeric & categorical lists\n",
-    "#numeric_cols = ['account length','number vmail messages','total day minutes','total day calls','total day charge','total eve minutes','total eve calls','total eve charge','total night minutes','total night calls', 'total night charge','total intl minutes','total intl calls','total intl charge','customer service calls']\n",
-    "#categoric_cols = ['state','area code','international plan','voice mail plan']"
    ]
   },
   {
@@ -835,6 +851,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d944d99",
+   "metadata": {},
+   "source": [
+    "Most features have low correlation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ce5c964",
+   "metadata": {},
+   "source": [
+    "## Modelling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "id": "4ec970f2",
@@ -846,19 +878,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b3b4da7",
+   "metadata": {},
+   "source": [
+    "##### Define feature matrix X and target vector y"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "6801a34a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "y = df['churn']\n",
     "x = df_dummies.drop('churn', axis=1)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6f3cf35",
+   "metadata": {},
+   "source": [
+    "#### Splitting the dataset into training and testing sets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "7608b096",
    "metadata": {},
    "outputs": [],
@@ -867,8 +916,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "130f2c96",
+   "metadata": {},
+   "source": [
+    "####\tStandardize the feature values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "c718f6f3",
    "metadata": {},
    "outputs": [],
@@ -2074,7 +2131,7 @@
    "id": "70cc68a4",
    "metadata": {},
    "source": [
-    "### 6.6 Visualizing Model Performance (ROC Curve)\n",
+    "### 6.5 Visualizing Model Performance (ROC Curve)\n",
     "By plotting the ROC Curve for both models, we can visually confirm which model has better \"separation\" power. \n",
     "\n",
     "**Observation:** The **Decision Tree** curve sits closer to the top-left corner and has a higher AUC. This confirms that it is more effective at maximizing the True Positive Rate while keeping the False Positive Rate low, compared to the Logistic Regression baseline."
@@ -2085,7 +2142,7 @@
    "id": "b6e8ef31",
    "metadata": {},
    "source": [
-    "## 6.5 Final Model Selection: The Winner\n",
+    "## 6.6 Final Model Selection: \n",
     "After rigorous testing, the **Decision Tree Classifier** is selected as the final production model for SyriaTel. \n",
     "\n",
     "**Why it was chosen:**\n",
@@ -2099,14 +2156,6 @@
     "1. **The \"4-Call\" Alert:** Automatically trigger a customer success intervention when a user reaches their 4th service call.\n",
     "2. **International Plan Audit:** Review the pricing and value of the International Plan, as it is a top-level split in the decision-making process for churners.\n",
     "3. **Focus on High-Usage Churn:** Direct retention efforts toward high-usage day-time callers, as usage intensity is a primary predictor of dissatisfaction."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a8e0b230",
-   "metadata": {},
-   "source": [
-    "From Logistic Regression model,"
    ]
   }
  ],
